schema/testdata/errors/expressions_compare_model_operand_incompatible_operator.keel
model User {
    fields {
        identity Identity @unique
    }
}

model BankAccount {
    fields {
        identity Identity @unique
    }

    actions {
        get getBankAccount(id) {
            //expect-error:55:57:AttributeExpressionError:cannot use operator 'in' with types User and User
            @permission(expression: ctx.identity.user in bankAccount.identity.user)
            //expect-error:55:56:AttributeExpressionError:cannot use operator '>' with types User and User
            @permission(expression: ctx.identity.user > bankAccount.identity.user)
        }
    }
}
